--- a/mt7981.config
+++ b/mt7981.config
@@ -203,6 +203,7 @@ CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
+CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_kvcedit=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
