--- a/.github/workflows/Build_mt7981.yml
+++ b/.github/workflows/Build_mt7981.yml
@@ -131,8 +131,8 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd ImmortalWrt/bin/targets/*/*
+        zip -r -y packages.zip packages/
         rm -rf packages
-        zip -r -y kmods.zip kmods/
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
@@ -174,7 +174,7 @@ jobs:
         files: |
           ${{ env.FIRMWARE }}/*factory.bin
           ${{ env.FIRMWARE }}/*sysupgrade.bin
-          ${{ env.FIRMWARE }}/kmods.zip
+          ${{ env.FIRMWARE }}/packages.zip
           ImmortalWrt/build.config
 
     - name: Delete workflow runs
